Updated dataset and organization localization

--- a/examples/catalog/locales/ar/common.json
+++ b/examples/catalog/locales/ar/common.json
@@ -1,53 +1,46 @@
 {
-    "Portal": "منفذ",
-    "title": "باللغة العربية",
-    "description": "مرحبا بكم في موقع بيانات",
-    "Find, Share and Publish": "البحث والمشاركة والنشر",
-    "Quality Data with": "جودة البيانات مع",
-    "Datahub": "داتاهوب",
-    "Search": "يبحث",
-    "Order by": "ترتيب حسب",
-    "Relevance": "ملاءمة",
-    "Name Ascending": "الاسم تصاعديا",
-    "Name Descending": "الاسم تنازليًا",
-    "Last Modified": "آخر تعديل",
-    "Popular": "شائع",
-    "Recent Datasets": "مجموعات البيانات الحديثة",
-    "View Dataset": "عرض البيانات",
-    "Error loading search results": "خطأ في تحميل نتائج البحث",
-    "results found": "العثور على نتائج",
-    "Loading": "جار التحميل",
-    "Title": "لقب",
-    "Name": "اسم",
-    "Description": "وصف",
-    "Download": "تحميل",
-    "Source": "مصدر",
-    "License": "رخصة",
-    "Updated": "محدث",
-    "Created": "خلقت",
-    "Format": "صيغة",
-    "Size": "بحجم",
-    "Files": "الملفات",
-    "File": "ملف",
-    "Link": "حلقة الوصل",
-    "Data Files": "ملفات البيانات",
+  "Portal": "منفذ",
+  "title": "باللغة العربية",
+  "description": "مرحبا بكم في موقع بيانات",
+  "Find, Share and Publish": "البحث والمشاركة والنشر",
+  "Quality Data with": "جودة البيانات مع",
+  "Search": "يبحث",
+  "Order by": "ترتيب حسب",
+  "Relevance": "ملاءمة",
+  "Name Ascending": "الاسم تصاعديا",
+  "Name Descending": "الاسم تنازليًا",
+  "Last Modified": "آخر تعديل",
+  "Popular": "شائع",
+  "Recent Datasets": "مجموعات البيانات الحديثة",
+  "View Dataset": "عرض البيانات",
+  "Error loading search results": "خطأ في تحميل نتائج البحث",
+  "results found": "العثور على نتائج",
+  "Loading": "جار التحميل",
+  "Title": "لقب",
+  "Name": "اسم",
+  "Description": "وصف",
+  "Download": "تحميل",
+  "Source": "مصدر",
+  "License": "رخصة",
+  "Updated": "محدث",
+  "Created": "خلقت",
+  "Format": "صيغة",
+  "Size": "بحجم",
+  "Files": "الملفات",
+  "File": "ملف",
+  "Link": "حلقة الوصل",
+  "Data Files": "ملفات البيانات",
 
-    "federal-authority-for-identity": "federal-authority-for-identity",
-    "Federal Authority For Identity": "Federal Authority For Identity",
-    "ministry-of-health-and-prevention": "ministry-of-health-and-prevention",
-    "Ministry of Health and Prevention": "Ministry of Health and Prevention",
-    "higher-colleges-of-technology": "higher-colleges-of-technology",
-    "Higher Colleges of Technology": "Higher Colleges of Technology",
-    "ministry-of-climate-change-environment": "ministry-of-climate-change-environment",
-    "Ministry Of Climate Change & Environment": "Ministry Of Climate Change & Environment",
+  "Ministry of Health and Prevention": "Ministry of Health and Prevention",
+  "Higher Colleges of Technology": "Higher Colleges of Technology",
+  "Ministry Of Climate Change & Environment": "Ministry Of Climate Change & Environment",
+  "Federal Authority For Identity and Citizenship": "Federal Authority For Identity and Citizenship",
 
-    "Statistics of Establishment Card Services": "Statistics of Establishment Card Services",
-    "Number of ID Cards Delivered to Customers per Year": "Number of ID Cards Delivered to Customers per Year",
-    "Number of beds and hospitals by health sector": "Number of beds and hospitals by health sector",
-    "18-19 NEW STUDENT ENROLLMENTS BY HIGH SCHOOL": "Ministry of Health and Prevention",
-    "Mangrove Sites Coordinates 2015 (DS)": "Mangrove Sites Coordinates 2015 (DS)",
-    "Estimation Of Fish Quantities by emirate and method": "Estimation Of Fish Quantities by emirate and method",
-    "Birth Counts by gender, marital status, nationality group and emirate": "Birth Counts by gender, marital status, nationality group and emirate",
-    "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER": "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER",
-    "Five most common cancers by gender in UAE": "Five most common cancers by gender in UAE"
-  }
+  "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER 2018 2019": "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER 2018 2019",
+  "Mangrove Sites Coordinates": "Mangrove Sites Coordinates",
+  "Estimation Of Fish Quantities by emirate and method": "Estimation Of Fish Quantities by emirate and method",
+  "Number of ID Cards Delivered to Customers per Year": "Number of ID Cards Delivered to Customers per Year",
+  "Five most common cancers by gender in UAE": "Five most common cancers by gender in UAE",
+  "Number of beds and hospitals by health sector": "Number of beds and hospitals by health sector",
+  "Birth Counts by gender, marital status, nationality group and emirate": "Birth Counts by gender, marital status, nationality group and emirate"
+}
