--- a/examples/catalog/locales/en/common.json
+++ b/examples/catalog/locales/en/common.json
@@ -36,11 +36,12 @@
   "Ministry Of Climate Change & Environment": "Ministry Of Climate Change & Environment",
   "Federal Authority For Identity and Citizenship": "Federal Authority For Identity and Citizenship",
 
-  "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER 2018 2019": "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER 2018 2019",
-  "Mangrove Sites Coordinates": "Mangrove Sites Coordinates",
   "Estimation Of Fish Quantities by emirate and method": "Estimation Of Fish Quantities by emirate and method",
-  "Number of ID Cards Delivered to Customers per Year": "Number of ID Cards Delivered to Customers per Year",
   "Five most common cancers by gender in UAE": "Five most common cancers by gender in UAE",
+  "Birth Counts by gender, marital status, nationality group and emirate": "Birth Counts by gender, marital status, nationality group and emirate",
+  "Number of ID Cards Delivered to Customers per Year": "Number of ID Cards Delivered to Customers per Year",
+
+  "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER 2018 2019": "NEW STUDENT ENROLLMENTS BY HIGH SCHOOL TYPE AND GENDER 2018 2019",
   "Number of beds and hospitals by health sector": "Number of beds and hospitals by health sector",
-  "Birth Counts by gender, marital status, nationality group and emirate": "Birth Counts by gender, marital status, nationality group and emirate"
+  "Mangrove Sites Coordinates": "Mangrove Sites Coordinates"
 }
