--- a/examples/catalog/locales/ar/common.json
+++ b/examples/catalog/locales/ar/common.json
@@ -5,7 +5,7 @@
   "Find, Share and Publish": "البحث والمشاركة والنشر",
   "Quality Data with": "جودة البيانات مع",
   "Datahub": "مركز البيانات",
-  "Search": "يبحث",
+  "Search": "بحث",
   "Order by": "ترتيب حسب",
   "Relevance": "موضوعات ذات الصلة",
   "Name Ascending": "الاسم تصاعديا",
@@ -69,6 +69,7 @@
   "Indicator Definition: Total number of live births registered in the UAE. Live Birth means the complete expulsion or extraction from its mother of a product of human conception, irrespective of the duration of pregnancy, which, after such expulsion or extraction, breathes, or shows any other evidence of life such as beating of the heart, pulsation of the umbilical cord, or definite movement of voluntary muscles, whether or not the umbilical cord has been cut or the placenta is attached. Heartbeats are to be distinguished from transient cardiac contractions; respirations are to be distinguished from fleeting respiratory efforts or gasps.": "تعريف المؤشر: إجمالي عدد المواليد الأحياء المسجلين في دولة الإمارات العربية المتحدة. الولادة الحية تعني الطرد أو الاستخراج الكامل من أمها لمنتج حمل بشري ، بغض النظر عن مدة الحمل ، والتي بعد هذا الطرد أو الاستخراج أو يتنفس أو يظهر أي دليل آخر على الحياة مثل ضربات القلب أو نبض الحبل السري أو حركة محددة للعضلات الإرادية ، سواء تم قطع الحبل السري أم لا أو تم توصيل المشيمة. يجب التمييز بين دقات القلب من تقلصات القلب العابرة ؛ يجب التمييز بين التنفس والجهود التنفسية العابرة أو اللهاث .",
   "Lung": "رئة",
   "Mangrove Sites Coordinates 2015 ": "إحداثيات مواقع المانغروف 2015",
+  "Mangrove Sites Coordinates": "إحداثيات مواقع المانغروف 2015",
   "Mangrove Sites Coordinates 2015 (DS).": "إحداثيات مواقع المانغروف 2015 (DS).",
   "Mangrove Sites Coordinates According Emirate in 2015": "إحداثيات مواقع المانغروف حسب الإمارة عام 2015",
   "mangrove-sites-coordinates-2015-ds": "إحداثيات مواقع المانغروف 2015 ds",
@@ -89,6 +90,7 @@
   "Number of beds and hospitals by health sector": "عدد الأسرة والمستشفيات حسب القطاع الصحي",
   "number of beds and hospitals by health sector ds": "عدد الأسرة والمستشفيات حسب القطاع الصحي",
   "number of id cards delivered to customer per year": "عدد بطاقات الهوية التي يتم تسليمها للعميل سنويا",
+  "Number of ID Cards Delivered to Customers per Year": "عدد بطاقات الهوية التي يتم تسليمها للعميل سنويا",
   "number of id cards delivered to customer per year 2016 2017": "عدد بطاقات الهوية التي يتم تسليمها للعميل سنويا 2016 2017",
   "number of id cards delivered to customer per year 2018 2019": "عدد بطاقات الهوية التي يتم تسليمها للعميل سنويا 2018 2019",
   "number of id cards delivered to customer per year 2019 2020": "عدد بطاقات الهوية التي يتم تسليمها للعميل سنويا 2019 2020",
