--- a/examples/catalog/locales/ar/common.json
+++ b/examples/catalog/locales/ar/common.json
@@ -54,6 +54,7 @@
   "estimation of fish quantities by emirate and method 2007 2018": "تقدير كميات الأسماك حسب الإمارة وطريقة الصيد 2007 2018",
   "estimation-of-fish-quantities-by-emirate-and": "تقدير كميات الأسماك حسب الإمارة و",
   "Federal Authority For Identity": "الهيئة الاتحادية للهوية",
+  "Federal Authority For Identity and Citizenship": "الهيئة الاتحادية للهوية والجنسية",
   "federal-authority-for-identity": "الهيئة الاتحادية للهوية والجنسية",
   "Five most common cancers by gender in UAE": "خمسة أنواع من السرطانات الأكثر شيوعًا حسب الجنس في الإمارات العربية المتحدة",
   "five most common cancers by gender in uae": "خمسة أنواع من السرطان الأكثر شيوعا حسب الجنس في الإمارات العربية المتحدة",
